--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
     <title>Bubs</title>
 </head>
 <body>
-    <h1>Bubs</h1>
+    <h1>BUBS</h1>
     <nav class="navbar">
         <ul>
             <li><a href="/toys">TOYS</a></li>
@@ -23,6 +23,15 @@
 
             <button><a href ="/join">JOIN</a></button>
         </ul>
+        <div class="MENU">
+            <button class="dropbtn">Menu</button>
+            <div class="dropdown-content">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+            </div>
+          </div>
+          
     </nav>
     <ol>
         {% for id, name, image, price in product_items %}
