updated edit add delete but not yet working fully

--- a/templates/toys.html
+++ b/templates/toys.html
@@ -10,7 +10,7 @@
 <body>
     <h1>BUBS</h1>
         <div class="dropdown" style="float:left;">
-            <button class="dropbtn">Menu</button>
+            <button class="dropbtn" >Menu</button>
             <div class="dropdown-content">
                 <a href="/toys">TOYS</a>
             
@@ -25,5 +25,27 @@
                 <a href ="/join">JOIN</a>
             </div>
         </div>
+    <br>
+    <br>
+    <br>
+    <ol>
+        {% for id, name, image, price in product_items %}
+        <li>
+            <br>
+            <br>
+            <img src = "{{image}}">
+            <br>
+            <br>
+            {{name}}
+            <br>
+            <br>
+            {{price}}
+            <br>
+            <br>
+            [ <a href="/delete">Delete Item</a> / <a href="/edit">Edit Item</a> / <a href="/add">Add Item</a> ]
+            <br>
+        </li>
+        {% endfor %}
+    </ol>  
 </body>
 </html>
