--- a/static/style.css
+++ b/static/style.css
@@ -20,6 +20,18 @@ h1 {
     font-size: 50px;
     background-color: #f8e9c9;
 }
+h2 {
+    font-size: 16px;
+    color: #f8e9c9;
+}
+h3 {
+    font-size: 16px;
+    color: #f8e9c9;
+}
+label {
+    font-size: 16px;
+    color: #f8e9c9;
+}
 li {
     font-size: 15px;
     list-style-type: none;
@@ -32,11 +44,44 @@ img {
     /* border-color: #915cab; */
     border-style: solid;
 }
-button > a {
-    color: #f8e9c9;
+.dropbtn {
+    background-color: #f8e9c9;
+    color: #d16b9b;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}  
+.dropdown {
+    position: relative;
+    display: inline-block;
 }
-button {
+  
+.dropdown-content {
+    display: none;
+    position: absolute;
     background-color: #d16b9b;
-    border-radius: 5px;
-    border-style: solid;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+  
+.dropdown-content a {
+    color: #915cab;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-weight: bold;
+}
+  
+.dropdown-content a:hover {
+    background-color: #f8e9c9;
+}
+  
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+  
+.dropdown:hover .dropbtn {
+    background-color: #f8e9c9;
 }
