--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/style.css">
-    <title>Bubs</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/static/style.css">
+  <title>{% block title %}{% endblock %} - Bubs</title>
 </head>
 <body>
+  <div id="content">
     <h1>BUBS</h1>
     <div class="dropdown" style="float:left;">
         <button class="dropbtn">Menu</button>
@@ -25,15 +26,6 @@
             <button><a href ="/join">JOIN</a></button>
         </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <h2>LOG IN</h2>
-    <form method="POST" action="/login_action">
-        <label>Email: <input type="text" name="email" value="{{email}}"></label>
-        <!-- <label>Password: <input type="text" name="password" value="{{password}}"></label> -->
-        <input type="Submit">
-    </form>
+</div>
 </body>
 </html>
