--- a/templates/home.html
+++ b/templates/home.html
@@ -25,5 +25,13 @@
                 <a href ="/join">JOIN</a>
             </div>
         </div>
+        <br>
+        <br>
+        <br>
+        <div class="first">
+            <img src="https://cdn.shopify.com/s/files/1/0249/5715/7421/files/the_memo_1200x1200.jpg?v=1636325720" class="homeimagefirst" alt="firstphoto">
+        </div>
+        <footer>copyright 2022</footer>
+
 </body>
 </html>
