--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,12 @@ body {
     color: #d16b9b;
     background-color: #d16b9b;
 }
+.first {
+    padding: 20px 10px 10px 50px;
+}
+.homeimagefirst {
+    width: 1000px;
+}
 nav {
     width: 100%;
   }  
@@ -14,7 +20,6 @@ nav > ul > li {
 a{
     text-decoration: none;
     color: #f8e9c9;
-    border-radius: 5px;
 }
 h1 {
     font-size: 50px;
@@ -37,20 +42,20 @@ li {
     list-style-type: none;
     color: #f8e9c9;
 }
-img {
-    border-radius: 30px;
+.imageproduct {
     width: 250px;
     align-content: center;
-    /* border-color: #915cab; */
+    border-color: #915cab;
     border-style: solid;
 }
 .dropbtn {
     background-color: #f8e9c9;
+    padding: 15px;
     color: #d16b9b;
-    padding: 16px;
-    font-size: 16px;
+    font-size: 20px;
     border: none;
     cursor: pointer;
+    font-weight: bolder;
 }  
 .dropdown {
     position: relative;
@@ -60,14 +65,14 @@ img {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #d16b9b;
+    background-color: #f8e9c9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
   
 .dropdown-content a {
-    color: #915cab;
+    color: #d16b9b;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -75,7 +80,7 @@ img {
 }
   
 .dropdown-content a:hover {
-    background-color: #f8e9c9;
+    background-color: #915cab;
 }
   
 .dropdown:hover .dropdown-content {
@@ -83,5 +88,10 @@ img {
 }
   
 .dropdown:hover .dropbtn {
-    background-color: #f8e9c9;
+    background-color: #915cab;
+}
+footer {
+    font-size: 10px;
+    padding: 1px 10px 10px 50px;
+    color: #f8e9c9;
 }
