--- a/templates/toys.html
+++ b/templates/toys.html
@@ -10,7 +10,7 @@
 <body>
     <h1>BUBS</h1>
         <div class="dropdown" style="float:left;">
-            <button class="dropbtn" >Menu</button>
+            <button class="dropbtn">Menu</button>
             <div class="dropdown-content">
                 <a href="/toys">TOYS</a>
             
@@ -33,7 +33,7 @@
         <li>
             <br>
             <br>
-            <img src = "{{image}}">
+            <img src = "{{image}}" class="imageproduct">
             <br>
             <br>
             {{name}}
@@ -42,7 +42,7 @@
             {{price}}
             <br>
             <br>
-            [ <a href="/delete">Delete Item</a> / <a href="/edit">Edit Item</a> / <a href="/add">Add Item</a> ]
+            [ <a href="/edit">Edit Item</a> / <a href="/delete">Delete Item</a> / <a href="/add">Add Item</a> ]
             <br>
         </li>
         {% endfor %}
