--- a/static/style.css
+++ b/static/style.css
@@ -8,7 +8,7 @@ body {
     padding: 20px 10px 10px 50px;
 }
 .homeimagefirst {
-    width: 1000px;
+    width: inherit;
 }
 nav {
     width: 100%;
@@ -52,7 +52,7 @@ li {
     background-color: #f8e9c9;
     padding: 15px;
     color: #d16b9b;
-    font-size: 20px;
+    font-size: 15px;
     border: none;
     cursor: pointer;
     font-weight: bolder;
