--- a/templates/delete.html
+++ b/templates/delete.html
@@ -5,15 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/style.css">
-    <title>Food Truck</title>
+    <title>Bubs</title>
 </head>
 <body>
-    <h1>{{id}}</h1>
-    <p>Are you sure?</p>
-    <form action="/delete" method="post">
-        <input type="hidden" name = "id" value = "{{id}}">
+    <h1>Delete Item {{item_id}}: {{item.name}}</h1>
+        <p>Are you sure, you want to delete this item?</p>
+        <form action="/delete_action" method="POST">
+        <input type="hidden" name="id" value="{{ item_id }}">
         <button>Yes</button>
-    </form>
-
+        </form>
 </body>
 </html>
