--- a/templates/login.html
+++ b/templates/login.html
@@ -12,17 +12,15 @@
     <div class="dropdown" style="float:left;">
         <button class="dropbtn">Menu</button>
         <div class="dropdown-content">
-            <li><a href="/toys">TOYS</a></li>
-        
-            <li><a href="/clothes">CLOTHES</a></li>
-        
-            <li><a href="/books">BOOKS</a></li>
-            
-            <li><a href="/learn">LEARN</a></li>
-            
-            <button><a href ="/login">LOG IN</a></button>
+            <a href="/toys">TOYS</a>
 
-            <button><a href ="/join">JOIN</a></button>
+            <a href="/books">BOOKS</a>
+            
+            <a href="/learn">LEARN</a>
+            
+            <a href ="/login">LOG IN</a>
+
+            <a href ="/join">JOIN</a>
         </div>
     </div>
     <br>
