--- a/templates/toys.html
+++ b/templates/toys.html
@@ -14,8 +14,6 @@
             <div class="dropdown-content">
                 <a href="/toys">TOYS</a>
             
-                <a href="/clothes">CLOTHES</a>
-            
                 <a href="/books">BOOKS</a>
                 
                 <a href="/learn">LEARN</a>
@@ -29,7 +27,7 @@
     <br>
     <br>
     <ol>
-        {% for id, name, image, price in product_items %}
+        {% for id, name, price, image in product_items %}
         <li>
             <br>
             <br>
