--- a/templates/base.html
+++ b/templates/base.html
@@ -13,17 +13,15 @@
     <div class="dropdown" style="float:left;">
         <button class="dropbtn">Menu</button>
         <div class="dropdown-content">
-            <li><a href="/toys">TOYS</a></li>
+            <a href="/toys">TOYS</a>
         
-            <li><a href="/clothes">CLOTHES</a></li>
-        
-            <li><a href="/books">BOOKS</a></li>
+            <a href="/books">BOOKS</a>
             
-            <li><a href="/learn">LEARN</a></li>
+            <a href="/learn">LEARN</a>
             
-            <button><a href ="/login">LOG IN</a></button>
+            <a href ="/login">LOG IN</a>
 
-            <button><a href ="/join">JOIN</a></button>
+            <a href ="/join">JOIN</a>
         </div>
     </div>
 </div>
