--- a/templates/add.html
+++ b/templates/add.html
@@ -9,6 +9,16 @@
 </head>
 <body>
   <h1>BUBS</h1>
+        <div class="dropdown" style="float:left;">
+            <button class="dropbtn">Menu</button>
+            <div class="dropdown-content">
+                <a href="/toys">TOYS</a>
+                
+                <a href="/learn">LEARN</a>
+                
+                <a href ="/logout">LOG OUT</a>    
+            </div>
+        </div>
   <h3>Add an item:</h3>
       <form method="POST" action="/add_action">
         <div>
