--- a/templates/edit.html
+++ b/templates/edit.html
@@ -10,7 +10,7 @@
 <body>
   <h1>BUBS</h1>
     <h3>Edit Item:</h3>
-    <form method="POST" action="/edit_action/{{id}}">
+    <form method="POST" action="/edit_action">
     <div>
         <label>
         Item Name:
