--- a/templates/delete.html
+++ b/templates/delete.html
@@ -8,11 +8,9 @@
     <title>Bubs</title>
 </head>
 <body>
-    <h1>Delete Item {{item_id}}: {{item.name}}</h1>
-        <p>Are you sure, you want to delete this item?</p>
-        <form action="/delete_action" method="POST">
-        <input type="hidden" name="id" value="{{ item_id }}">
-        <button>Yes</button>
-        </form>
+    <h1>{{id}}</h1>
+    <form action="/delete" method="post">
+        <input type="hidden" name = "id" value = "{{id}}">
+    </form>
 </body>
 </html>
