--- a/templates/account.html
+++ b/templates/account.html
@@ -8,6 +8,42 @@
     <title>Bubs</title>
 </head>
 <body>
-    <p>WELCOME TO YOUR ACCOUNT</p>
+    <h1>BUBS</h1>
+    <h4>WELCOME TO YOUR ACCOUNT</h4>
+        <div class="dropdown" style="float:left;">
+            <button class="dropbtn">Menu</button>
+            <div class="dropdown-content">
+                <a href="/toys">TOYS</a>
+
+                <a href="/learn">LEARN</a>
+                
+                <a href ="/logout">LOG OUT</a>
+
+            </div>
+        </div>
+    <br>
+    <br>
+    <br>
+    <ol>
+        {% for id, name, price, image in product_items %}
+        <li>
+            <br>
+            <br>
+            <img src = "{{image}}" class="imageproduct">
+            <br>
+            <br>
+            {{name}}
+            <br>
+            <br>
+            {{price}}
+            <br>
+            <br>
+            [ <a href="/edit/{{id}}">Edit Item</a> / <a href="{{url_for('delete', toys_id = id)}}">Delete Item</a> / <a href="/add">Add Item</a> ]
+            <br>
+        </li>
+        {% endfor %}
+    </ol>  
+</body>
+</html>
 </body>
 </html>
