--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="content">
-    <h1>BUBS</h1>
+    <h1>BUBS for Babies</h1>
     <div class="dropdown" style="float:left;">
         <button class="dropbtn">Menu</button>
         <div class="dropdown-content">
@@ -23,5 +23,6 @@
         </div>
     </div>
   </div>
+  <footer>copyright 2022</footer>
 </body>
 </html>
