--- a/templates/edit.html
+++ b/templates/edit.html
@@ -8,7 +8,7 @@
     <title>Bubs</title>
 </head>
 <body>
-  <h1>BUBS</h1>
+    <h1>BUBS for Babies</h1>
     <h3>Edit Item:</h3>
     <form method="POST" action="/edit_action">
     <div>
@@ -35,5 +35,6 @@
     <input type="hidden" name="id" value="{{id}}">
     <input type="submit" value="Submit">
     </form>
+    <footer>copyright 2022</footer>
 </body>
 </html>
