--- a/templates/home.html
+++ b/templates/home.html
@@ -8,27 +8,27 @@
     <title>Bubs</title>
 </head>
 <body>
-    <h1>BUBS</h1>
+    <h1>BUBS for Babies</h1>
         <div class="dropdown" style="float:left;">
             <button class="dropbtn">Menu</button>
             <div class="dropdown-content">
-                <a href="/toys">TOYS</a>
+                <a href="/toys">Toys</a>
                 
-                <a href="/learn">LEARN</a>
+                <a href="/learn">Learn</a>
                 
-                <a href ="/login">LOG IN</a>
+                <a href ="/login">Log In</a>
     
-                <a href ="/join">JOIN</a>
+                <a href ="/join">Join</a>
             </div>
         </div>
         <br>
         <br>
         <br>
         <br>
+        <br>
         <div class="first">
-            <img src="https://cdn.shopify.com/s/files/1/0249/5715/7421/files/the_memo_1200x1200.jpg?v=1636325720" class="homeimagefirst" alt="firstphoto">
+            <img src="https://cdn.shopify.com/s/files/1/0687/7613/collections/BABY_Clothing_f98ca567-9f2f-4853-ab3e-0931bdf09958_2000x.jpg?v=1666838308" class="homeimagefirst" alt="firstphoto">
         </div>
         <footer>copyright 2022</footer>
-
 </body>
 </html>
