--- a/templates/learn.html
+++ b/templates/learn.html
@@ -15,28 +15,19 @@
             <a href="/">Home</a>
 
             <a href="/toys">Toys</a>
+                
+            <a href ="/login">Log In</a>
 
-            <a href="/learn">Learn</a>
-    
             <a href ="/join">Join</a>
+    
         </div>
     </div>
-    <div>
-        <img src="/static/login.jpg" class="loginphoto">
+    <div class="learn">
+        <h4>Learn</h4>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <h2>LOG IN</h2>
-    <form method="POST" action="/login_action">
-        <label>Email: <input type="text" name="email" value="{{email}}"></label>
-        <label>Password: <input type="text" name="password" value="{{password}}"></label>
-        <input type="Submit">
-    </form>
+    <div>
+        <img src="https://cdn.shopify.com/s/files/1/0687/7613/t/59/assets/lookbook-modmedia-7916-feature.jpg?v=1666576772" class="learnphoto">
+    </div>
     <footer>copyright 2022</footer>
 </body>
 </html>
