--- a/templates/account.html
+++ b/templates/account.html
@@ -8,17 +8,18 @@
     <title>Bubs</title>
 </head>
 <body>
-    <h1>BUBS</h1>
+    <h1>BUBS for Babies</h1>
     <h4>WELCOME TO YOUR ACCOUNT</h4>
         <div class="dropdown" style="float:left;">
             <button class="dropbtn">Menu</button>
             <div class="dropdown-content">
-                <a href="/toys">TOYS</a>
+                <a href="/">Home</a>
 
-                <a href="/learn">LEARN</a>
-                
-                <a href ="/logout">LOG OUT</a>
+                <a href="/toys">Toys</a>
 
+                <a href="/learn">Learn</a>
+
+                <a href ="/logout">LOG OUT</a>  
             </div>
         </div>
     <br>
@@ -43,7 +44,6 @@
         </li>
         {% endfor %}
     </ol>  
-</body>
-</html>
+    <footer>copyright 2022</footer>
 </body>
 </html>
