--- a/templates/add.html
+++ b/templates/add.html
@@ -8,15 +8,17 @@
     <title>Bubs</title>
 </head>
 <body>
-  <h1>BUBS</h1>
+  <h1>BUBS for Babies</h1>
         <div class="dropdown" style="float:left;">
             <button class="dropbtn">Menu</button>
             <div class="dropdown-content">
-                <a href="/toys">TOYS</a>
+              <a href="/">Home</a>
+
+              <a href="/toys">Toys</a>
+
+              <a href="/learn">Learn</a>
                 
-                <a href="/learn">LEARN</a>
-                
-                <a href ="/logout">LOG OUT</a>    
+              <a href ="/logout">LOG OUT</a>    
             </div>
         </div>
   <h3>Add an item:</h3>
@@ -44,5 +46,6 @@
         </div>
         <input type="submit" value="Submit">
       </form>
+      <footer>copyright 2022</footer>
 </body>
 </html>
