--- a/templates/delete.html
+++ b/templates/delete.html
@@ -8,9 +8,11 @@
     <title>Bubs</title>
 </head>
 <body>
+    <h1>BUBS for Babies</h1>
     <h1>{{id}}</h1>
     <form action="/delete" method="post">
         <input type="hidden" name = "id" value = "{{id}}">
     </form>
+    <footer>copyright 2022</footer>
 </body>
 </html>
