--- a/templates/toys.html
+++ b/templates/toys.html
@@ -8,17 +8,19 @@
     <title>Bubs</title>
 </head>
 <body>
-    <h1>BUBS</h1>
+    <h1>BUBS for Babies</h1>
         <div class="dropdown" style="float:left;">
             <button class="dropbtn">Menu</button>
             <div class="dropdown-content">
-                <a href="/toys">TOYS</a>
+                <a href="/">Home</a>
 
-                <a href="/learn">LEARN</a>
+                <a href="/toys">Toys</a>
+
+                <a href="/learn">Learn</a>
                 
-                <a href ="/login">LOG IN</a>
+                <a href ="/login">Log In</a>
     
-                <a href ="/join">JOIN</a>
+                <a href ="/join">Join</a>
             </div>
         </div>
     <br>
@@ -42,6 +44,7 @@
             <br>
         </li>
         {% endfor %}
-    </ol>  
+    
+    <footer>copyright 2022</footer>
 </body>
 </html>
