--- a/templates/account.html
+++ b/templates/account.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <h1>BUBS for Babies</h1>
-    <h4>WELCOME TO YOUR ACCOUNT</h4>
+    <h4>WELCOME TO YOUR ACCOUNT PEACH</h4>
+
         <div class="dropdown" style="float:left;">
             <button class="dropbtn">Menu</button>
             <div class="dropdown-content">
