--- a/templates/login.html
+++ b/templates/login.html
@@ -34,7 +34,7 @@
     <h2>LOG IN</h2>
     <form method="POST" action="/login_action">
         <label>Email: <input type="text" name="email" value="{{email}}"></label>
-        <label>Password: <input type="text" name="password" value="{{password}}"></label>
+        <label>Password: <input type="password" name="password" value="{{password}}"></label>
         <input type="Submit">
     </form>
     <footer>copyright 2022</footer>
