--- a/templates/add.html
+++ b/templates/add.html
@@ -18,9 +18,14 @@
 
               <a href="/learn">Learn</a>
                 
-              <a href ="/logout">LOG OUT</a>    
+              <a href ="/logout">Log Out</a>    
             </div>
         </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
   <h3>Add an item:</h3>
       <form method="POST" action="/add_action">
         <div>
