--- a/templates/edit.html
+++ b/templates/edit.html
@@ -9,6 +9,23 @@
 </head>
 <body>
     <h1>BUBS for Babies</h1>
+    <div class="dropdown" style="float:left;">
+        <button class="dropbtn">Menu</button>
+        <div class="dropdown-content">
+          <a href="/">Home</a>
+
+          <a href="/toys">Toys</a>
+
+          <a href="/learn">Learn</a>
+            
+          <a href ="/logout">Log Out</a>    
+        </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <h3>Edit Item:</h3>
     <form method="POST" action="/edit_action">
     <div>
