--- a/templates/home.html
+++ b/templates/home.html
@@ -29,6 +29,6 @@
         <div class="first">
             <img src="https://cdn.shopify.com/s/files/1/0687/7613/collections/BABY_Clothing_f98ca567-9f2f-4853-ab3e-0931bdf09958_2000x.jpg?v=1666838308" class="homeimagefirst" alt="firstphoto">
         </div>
-        <footer>copyright 2022</footer>
+        <footer>Copyright 2022</footer>
 </body>
 </html>
