--- a/templates/login.html
+++ b/templates/login.html
@@ -35,8 +35,11 @@
     <form method="POST" action="/login_action">
         <label>Email: <input type="text" name="email" value="{{email}}"></label>
         <label>Password: <input type="password" name="password" value="{{password}}"></label>
-        <input type="Submit">
+        <button type="Submit">Log In</button>
     </form>
+    <br>
+    <br>
+    <br>
     <footer>copyright 2022</footer>
 </body>
 </html>
