--- a/templates/account.html
+++ b/templates/account.html
@@ -45,6 +45,6 @@
         </li>
         {% endfor %}
     </ol>  
-    <footer>copyright 2022</footer>
+    <footer>Copyright 2022</footer>
 </body>
 </html>
