--- a/templates/delete.html
+++ b/templates/delete.html
@@ -13,6 +13,6 @@
     <form action="/delete" method="post">
         <input type="hidden" name = "id" value = "{{id}}">
     </form>
-    <footer>copyright 2022</footer>
+    <footer>Copyright 2022</footer>
 </body>
 </html>
