--- a/templates/edit.html
+++ b/templates/edit.html
@@ -52,6 +52,6 @@
     <input type="hidden" name="id" value="{{id}}">
     <input type="submit" value="Submit">
     </form>
-    <footer>copyright 2022</footer>
+    <footer>Copyright 2022</footer>
 </body>
 </html>
