--- a/templates/join.html
+++ b/templates/join.html
@@ -49,5 +49,5 @@
             </div>
         </form>
     </div>
-    <footer>copyright 2022</footer>
+    <footer>Copyright 2022</footer>
 </body>
