--- a/templates/learn.html
+++ b/templates/learn.html
@@ -28,6 +28,6 @@
     <div>
         <img src="https://cdn.shopify.com/s/files/1/0687/7613/t/59/assets/lookbook-modmedia-7916-feature.jpg?v=1666576772" class="learnphoto">
     </div>
-    <footer>copyright 2022</footer>
+    <footer>Copyright 2022</footer>
 </body>
 </html>
