--- a/templates/add.html
+++ b/templates/add.html
@@ -51,6 +51,6 @@
         </div>
         <input type="submit" value="Submit">
       </form>
-      <footer>copyright 2022</footer>
+      <footer>Copyright 2022</footer>
 </body>
 </html>
